--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,7 @@
 .time-slot {
-    height: 50px;
     width: 50px;
-    background-color: blue;
+    border: 2px solid blue;
     color: green;
+    margin: 15px;
+    line-height: 25px;
 }
